<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@mipmap/siemens_logo_four" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:id="@+id/SystemId"
        android:text="@string/add_systemid"/>


    <EditText
        android:id="@+id/SystemInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/systemid"
        android:backgroundTint="@color/dark2"
        android:textColor="@color/accent2"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:id="@+id/Problem"
        android:text="@string/add_problem"
        android:layout_marginTop="15dp"/>


    <EditText
        android:id="@+id/ProblemInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/probleminput"
        android:backgroundTint="@color/dark2"
        android:textColor="@color/accent2"/>



    <Button
        android:id="@+id/sendmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendmail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/light1"
        android:background="@color/accent3"/>

    <Button
        android:id="@+id/callsupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/callsupport"
        android:textColor="@color/light1"
        android:background="@color/accent3"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goback"
        android:text="@string/back"
        android:textColor="@color/light1"
        android:background="@color/accent3"
        android:layout_marginTop="15dp"/>


</LinearLayout>