<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_contact_yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourName"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText_contact_yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_contact_yourTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourTelephone"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText_contact_yourTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        />

    <!--android:inputType=""-->
        <!--android:autofillHints="" -->

    <TextView
        android:id="@+id/textView_contact_yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourEmail"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText_contact_yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_contact_yourEmployeeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourEmployeeID"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText_contact_yourEmployeeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_contact_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>