<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@mipmap/siemens_logo_four" />

    <TextView
        android:id="@+id/textView_contact_yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system"
        android:textSize="10sp"
        android:textColor="@color/accent5"/>

    <EditText
        android:id="@+id/editText_contact_yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/system"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/sendmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/light1"
            android:background="@color/accent3"
            android:text="@string/sendmail"
            android:onClick="createemail"/>

        <Button
            android:id="@+id/callsupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/light1"
            android:background="@color/accent3"
            android:text="@string/callsupport"/>

        <Button
            android:id="@+id/back2menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/light1"
            android:background="@color/accent3"
            android:text="@string/back"/>

        </LinearLayout>

</LinearLayout>